add chinese version of website

--- a/index-cn.html
+++ b/index-cn.html
@@ -35,13 +35,13 @@
 		    <div class="container main-menu">
 		    	<div class="row align-items-center justify-content-between d-flex">
 			      <div id="logo">
-			        <a href="index.html" class="navbar-title">Jennifer Wu</a>
+			        <a href="index-cn.html" class="navbar-title">Jennifer Wu</a>
 			      </div>
 			      <nav id="nav-menu-container">
 			        <ul class="nav-menu">
-			          <li><a href="about.html">About</a></li>
-			          <li><a href="https://medium.com/@jenniwu94" target="_blank">Thoughts</a></li>
-								<li><a href="index-cn.html">中文</a></li>
+			          <li><a href="about-cn.html">关于</a></li>
+			          <li><a href="https://medium.com/@jenniwu94" target="_blank">文章</a></li>
+								<li><a href="index.html">English</a></li>
 			        </ul>
 			      </nav>
 		    	</div>
@@ -54,14 +54,17 @@
 					<div class="row fullscreen align-items-center justify-content-between">
 						<div class="col-lg-6 col-md-6 banner-left">
 							<h1>
-								<span>Hey there! I'm Jennifer, </span>
-								<span class="title-emphasis">a multidisciplinary product engineer </span>
-								<span>passionate about building projects that empower people. 💪</span>
+								<span>你好，我是 Jennifer，</span>
+								<span>一名</span>
+								<span class="title-emphasis">多学科产品工程师</span>
+								<span>，热衷于创造为他人带来价值的项目。💪</span>
 							</h1>
 							<p>
-								I care a lot about enabling strategic business decisions with well-engineered solutions. As someone who's been in a lot of roles -- full-stack engineer, business analyst, financial services associate, entrepreneur -- I'm comfortable wearing multiple hats while architecting a product (and enjoy it a lot, too!).
+								我很注重通过精心设计的解决方案来推动有战略性的商业决定。
+								我具有多种角色的工作经验，包括全栈工程师，业务分析师和财务服务人员。
+								这些带给我具有从多种视角分析并设计产品的能力。
 							</p>
-							<a href="about.html" class="primary-btn text-uppercase">Learn More</a>
+							<a href="about.html" class="primary-btn text-uppercase">了解更多</a>
 						</div>
 						<div class="col-lg-6 col-md-6 banner-right align-self-end">
 							<img class="img-fluid" src="img/image.png" alt="">
@@ -77,7 +80,7 @@
 		            <div class="row d-flex justify-content-center">
 		                <div class="menu-content  col-lg-7">
 		                    <div class="title text-center">
-		                        <h2 class="mb-10">Values</h2>
+		                        <h2 class="mb-10">价值观</h2>
 		                    </div>
 		                </div>
 		            </div>
@@ -85,27 +88,27 @@
 						<div class="col-lg-4 col-md-6">
 							<div class="single-services">
 								<i class="lnr fa fa-handshake-o"></i>
-								<h4>Trust</h4>
+								<h4>信任</h4>
 								<p>
-									I believe strong relationships are the foundation to an effective team, and trust is critical to building relationships. I gain trust by committing to the right things and delivering my commitments in a timely manner.
+									我相信坚固的人际关系是建立有效团队的前提，而信任是创立良好关系的前提。我通过对正确的事情做出承诺并及时履行我的承诺，从而获得信任。
 								</p>
 							</div>
 						</div>
 						<div class="col-lg-4 col-md-6">
 							<div class="single-services">
 								<i class="lnr fa fa-rocket"></i>
-								<h4>Innovation</h4>
+								<h4>创新</h4>
 								<p>
-									Gorbachev once said, “If you don’t move forward, you begin to move backward.” I strive to constantly improve and innovate on the status quo, and as such, I am constantly learning new things and exploring better ways to do things.
+									“如果止步不前，我们就是在后退。” 我力图改进现状，所以我不断地学习新的科技、探索更有效的工作方法。
 								</p>
 							</div>
 						</div>
 						<div class="col-lg-4 col-md-6">
 							<div class="single-services">
 								<i class="lnr fa fa-search"></i>
-								<h4>Curiosity</h4>
+								<h4>求知</h4>
 								<p>
-									Why do things happen the way they do? I ask myself this question nearly every day to develop a genuine curiosity. When I’m curious, I’m passionate; and when I’m passionate, I’m determined to deliver excellence in everything I do.
+									我时常在问自己，为什么某件事情是它现在的样子？我的求知欲给我热情，而热情让我不断地追求卓越。
 								</p>
 							</div>
 						</div>
@@ -254,9 +257,9 @@
                     <div class="row">
                         <div class="col-lg-5 col-md-6 col-sm-6">
                             <div class="single-footer-widget">
-                                <h4>Who is Jennifer?</h4>
+                                <h4>Jennifer是谁？</h4>
                                 <p>
-																	Business strategist, software developer, and multidisciplinary product engineer who enjoys creating meaningful, strategic, and empowering solutions to difficult business problems. I love learning about new technologies and building products for positive social impact.
+																	商业策划师、软件工程师、多学科产品工程师。热爱通过创造有意义、战略性和鼓舞他人的方案来解决困难商业问题。对新科技充满好奇心，并且喜欢开发有积极社会影响的产品。
                                 </p>
                                 <p class="footer-text">
 																	Copyright &copy;<script>document.write(new Date().getFullYear());</script>, All rights reserved
@@ -265,8 +268,7 @@
                         </div>
                         <div class="col-lg-7 col-md-6 col-sm-6 social-widget">
                             <div class="single-footer-widget">
-                                <h4>Social</h4>
-                                <p>Let's connect.</p>
+                                <h4>社交平台</h4>
                                 <div class="footer-social d-flex align-items-center">
                                     <a href="https://www.linkedin.com/in/jensywu/" target="_blank"><i class="fa fa-linkedin-square"></i></a>
                                     <a href="https://twitter.com/tweetjenniwu" target="_blank"><i class="fa fa-twitter"></i></a>
