--- a/about-cn.html
+++ b/about-cn.html
@@ -34,14 +34,14 @@
 		  <header id="header">
 		    <div class="container main-menu">
 		    	<div class="row align-items-center justify-content-between d-flex">
-			      <div id="logo">
-			        <a href="index.html" class="navbar-title">Jennifer Wu</a>
+						<div id="logo">
+			        <a href="index-cn.html" class="navbar-title">Jennifer Wu</a>
 			      </div>
 			      <nav id="nav-menu-container">
 			        <ul class="nav-menu">
-			          <li><a href="about.html">About</a></li>
-			          <li><a href="https://medium.com/@jenniwu94" target="_blank">Thoughts</a></li>
-								<li><a href="index-cn.html">中文</a></li>
+			          <li><a href="about-cn.html">关于</a></li>
+			          <li><a href="https://medium.com/@jenniwu94" target="_blank">文章</a></li>
+								<li><a href="index.html">English</a></li>
 			        </ul>
 			      </nav>
 		    	</div>
@@ -56,18 +56,15 @@
 							<img class="img-fluid" src="img/image.png" alt="">
 						</div>
 						<div class="col-lg-7 col-md-6 home-about-right">
-							<h6 class="text-uppercase">About Me</h6>
-							<h1 class="text-uppercase">Hello! 👋</h1>
+							<h6 class="text-uppercase">关于我</h6>
+							<h1 class="text-uppercase">你好! 👋</h1>
 							<p>
-								I'm Jennifer, a multidisciplinary product engineer who enjoys creating meaningful, strategic, and empowering solutions to difficult business problems. I love learning about new technologies and building products for positive social impact.
+								我是 Jennifer，一名热爱通过创造有意义、战略性和鼓舞他人的方案来解决困难商业问题的多学科产品工程师。我对新科技充满好奇心，并且喜欢开发有积极社会影响的产品。
 							</p>
 							<p>
-								Most recently, I was a Software Development Engineer intern at Amazon Web Services, helping improve the user experience and design of the AWS Billing Console. Prior to this, I worked in the financial and professional services industry, helping clients with their legal compliance requirements.
+								近期，我在亚马逊 AWS 担任软件工程实习生的职位，重新设计了AWS Billing Console的页面以改善用户体验。在这之前，我从事财务服务工作，帮助客户应对他们的法律合规要求。
 							</p>
-							<p>
-								I'm also proudly Canadian 🇨🇦 and eat bacon with maple syrup. 😋
-							</p>
-							<a href="JenniferWuResume2019.pdf" target="_blank" class="primary-btn text-uppercase">View Resume →﻿</a>
+							<a href="JenniferWuResume2019.pdf" target="_blank" class="primary-btn text-uppercase">查看简历 →﻿</a>
 						</div>
 					</div>
 				</div>
@@ -79,8 +76,8 @@
             <div class="text-center">
                 <div class="menu-content">
                     <div class="title text-center">
-                        <h1 class="mb-10">My Qualifications</h1>
-                        <p>Bridging business with technology.</p>
+                        <h1 class="mb-10">我的资历</h1>
+                        <p>科技连接商业</p>
                     </div>
                 </div>
             </div>
@@ -89,9 +86,9 @@
 			      <div class="content">
 							<img class="img-fluid company-logo mx-auto d-block mb-30" src="img/about/ubc-logo.png" alt="">
 			        <h4>
-			          <time>Bachelor of Computer Science</time>
+			          <time>计算机科学学士</time>
 			        </h4>
-							<p><b>University of British Columbia</b></p>
+							<p><b>英属哥伦比亚大学</b></p>
 			        <p>2016-2019</p>
 			        <p><b>GPA:</b> A, 4.0/4.0</p>
 			      </div>
@@ -100,7 +97,7 @@
 			      <div class="content">
 			      	<img class="img-fluid company-logo mx-auto d-block mb-30" src="img/about/visier-logo.png" alt="">
 			        <h4>
-			          <time>Software Developer Intern</time>
+			          <time>软件开发实习生</time>
 			        </h4>
 			        <p>2018</p>
 			      </div>
@@ -109,7 +106,7 @@
 			      <div class="content">
 							<img class="img-fluid company-logo mx-auto d-block mb-30" src="img/about/aws-logo.png" alt="">
 			        <h4>
-			          <time>Software Development Engineer Intern</time>
+			          <time>实习软件开发工程师</time>
 			        </h4>
 			        <p>2018</p>
 			      </div>
@@ -118,9 +115,9 @@
 			      <div class="content">
 			      	<img class="img-fluid company-logo mx-auto d-block mb-30" src="img/about/sauder-logo.png" alt="">
 			        <h4>
-			          <time>Bachelor of Commerce, Accounting Honors</time>
+			          <time>商科学士，会计专业，荣誉毕业生</time>
 			        </h4>
-							<p><b>Sauder School of Business</b></p>
+							<p><b>尚德商学院，英属哥伦比亚大学</b></p>
 			        <p>2011-2016</p>
 			        <p><b>GPA:</b> A-, 3.7/4.0</p>
 			      </div>
@@ -129,7 +126,7 @@
 			      <div class="content">
 			      	<img class="img-fluid company-logo mx-auto d-block mb-30" src="img/about/adidas-logo.png" alt="">
 			        <h4>
-			          <time>Business Analyst</time>
+			          <time>业务分析师</time>
 			        </h4>
 			        <p>2014-2015</p>
 			      </div>
@@ -138,7 +135,7 @@
 			      <div class="content">
 			      	<img class="img-fluid company-logo mx-auto d-block mb-30" src="img/about/pwc-logo.png" alt="">
 			        <h4>
-			          <time>Audit and Assurance Associate, Tax Associate</time>
+			          <time>初级审计人员，初级税务人员</time>
 			        </h4>
 			        <p>2014</p>
 			      </div>
@@ -147,7 +144,7 @@
 			      <div class="content">
 			      	<img class="img-fluid company-logo mx-auto d-block mb-30" src="img/about/activestate-logo.png" alt="">
 			        <h4>
-			          <time>Accounting Specialist</time>
+			          <time>会计专员</time>
 			        </h4>
 			        <p>2013-2014</p>
 			      </div>
@@ -161,9 +158,9 @@
                     <div class="row">
                         <div class="col-lg-5 col-md-6 col-sm-6">
                             <div class="single-footer-widget">
-                                <h4>Who is Jennifer?</h4>
+                                <h4>Jennifer是谁？</h4>
                                 <p>
-																	Business Strategist, Software Developer, and a multidisciplinary product engineer who enjoys creating meaningful, strategic, and empowering solutions to difficult business problems. I love learning about new technologies and building products for positive social impact.
+																	商业策划师、软件工程师、多学科产品工程师。热爱通过创造有意义、战略性和鼓舞他人的方案来解决困难商业问题。对新科技充满好奇心，并且喜欢开发有积极社会影响的产品。
                                 </p>
                                 <p class="footer-text">
 																	Copyright &copy;<script>document.write(new Date().getFullYear());</script>, All rights reserved
@@ -173,7 +170,6 @@
                         <div class="col-lg-7 col-md-6 col-sm-6 social-widget">
                             <div class="single-footer-widget">
                                 <h4>Social</h4>
-                                <p>Let's connect.</p>
                                 <div class="footer-social d-flex align-items-center">
                                     <a href="https://www.linkedin.com/in/jensywu/" target="_blank"><i class="fa fa-linkedin-square"></i></a>
                                     <a href="https://twitter.com/tweetjenniwu" target="_blank"><i class="fa fa-twitter"></i></a>
