fix bug in index-cn link

--- a/index-cn.html
+++ b/index-cn.html
@@ -64,7 +64,7 @@
 								我具有多种角色的工作经验，包括全栈工程师，业务分析师和财务服务人员。
 								这些带给我具有从多种视角分析并设计产品的能力。
 							</p>
-							<a href="about.html" class="primary-btn text-uppercase">了解更多</a>
+							<a href="about-cn.html" class="primary-btn text-uppercase">了解更多</a>
 						</div>
 						<div class="col-lg-6 col-md-6 banner-right align-self-end">
 							<img class="img-fluid" src="img/image.png" alt="">
