--- a/about-cn.html
+++ b/about-cn.html
@@ -62,9 +62,8 @@
 								我是 Jennifer，一名热爱通过创造有意义、战略性和鼓舞他人的方案来解决困难商业问题的多学科产品工程师。我对新科技充满好奇心，并且喜欢开发有积极社会影响的产品。
 							</p>
 							<p>
-								近期，我在亚马逊 AWS 担任软件工程实习生的职位，重新设计了AWS Billing Console的页面以改善用户体验。在这之前，我从事财务服务工作，帮助客户应对他们的法律合规要求。
+								我目前在亚马逊 AWS 担任软件工程实的职位，为企业用户提供消费分析。在这之前，我从事财务服务工作，帮助客户应对他们的法律合规要求。
 							</p>
-							<a href="JenniferWuResume2019.pdf" target="_blank" class="primary-btn text-uppercase">查看简历 →﻿</a>
 						</div>
 					</div>
 				</div>
@@ -82,6 +81,15 @@
                 </div>
             </div>
 			  <ul>
+				<li>
+					<div class="content">
+							  <img class="img-fluid company-logo mx-auto d-block mb-30" src="img/about/aws-logo.png" alt="">
+					  <h4>
+						<time>软件开发工程师</time>
+					  </h4>
+					  <p>2018-现在</p>
+					</div>
+				  </li>
 			    <li>
 			      <div class="content">
 							<img class="img-fluid company-logo mx-auto d-block mb-30" src="img/about/ubc-logo.png" alt="">
@@ -97,16 +105,7 @@
 			      <div class="content">
 			      	<img class="img-fluid company-logo mx-auto d-block mb-30" src="img/about/visier-logo.png" alt="">
 			        <h4>
-			          <time>软件开发实习生</time>
-			        </h4>
-			        <p>2018</p>
-			      </div>
-			    </li>
-			    <li>
-			      <div class="content">
-							<img class="img-fluid company-logo mx-auto d-block mb-30" src="img/about/aws-logo.png" alt="">
-			        <h4>
-			          <time>实习软件开发工程师</time>
+			          <time>软件工程师</time>
 			        </h4>
 			        <p>2018</p>
 			      </div>
