--- a/about.html
+++ b/about.html
@@ -62,12 +62,11 @@
 								I'm Jennifer, a multidisciplinary product engineer who enjoys creating meaningful, strategic, and empowering solutions to difficult business problems. I love learning about new technologies and building products for positive social impact.
 							</p>
 							<p>
-								Most recently, I was a Software Development Engineer intern at Amazon Web Services, helping improve the user experience and design of the AWS Billing Console. Prior to this, I worked in the financial and professional services industry, helping clients with their legal compliance requirements.
+								Currently, I am a Software Development Engineer at Amazon Web Services, delivering AWS Billing insights for enterprise customers. Prior to this, I worked in the financial and professional services industry, helping clients with their legal compliance requirements.
 							</p>
 							<p>
 								I'm also proudly Canadian 🇨🇦 and eat bacon with maple syrup. 😋
 							</p>
-							<a href="JenniferWuResume2019.pdf" target="_blank" class="primary-btn text-uppercase">View Resume →﻿</a>
 						</div>
 					</div>
 				</div>
@@ -85,6 +84,15 @@
                 </div>
             </div>
 			  <ul>
+				<li>
+					<div class="content">
+							  <img class="img-fluid company-logo mx-auto d-block mb-30" src="img/about/aws-logo.png" alt="">
+					  <h4>
+						<time>Software Development Engineer</time>
+					  </h4>
+					  <p>2018-Present</p>
+					</div>
+				  </li>
 			    <li>
 			      <div class="content">
 							<img class="img-fluid company-logo mx-auto d-block mb-30" src="img/about/ubc-logo.png" alt="">
@@ -100,16 +108,7 @@
 			      <div class="content">
 			      	<img class="img-fluid company-logo mx-auto d-block mb-30" src="img/about/visier-logo.png" alt="">
 			        <h4>
-			          <time>Software Developer Intern</time>
-			        </h4>
-			        <p>2018</p>
-			      </div>
-			    </li>
-			    <li>
-			      <div class="content">
-							<img class="img-fluid company-logo mx-auto d-block mb-30" src="img/about/aws-logo.png" alt="">
-			        <h4>
-			          <time>Software Development Engineer Intern</time>
+			          <time>Contract Software Engineer</time>
 			        </h4>
 			        <p>2018</p>
 			      </div>
